--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,17 @@ Copyright Notice
   <%= include_gon %>
 </head>
 <body class="<%= controller_name %> <%= action_name %>">
+<a id="skip-nav-link" href="#maincontent">
+  Skip to main content
+</a>
 <main role="main" class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
       <%= render 'layouts/navigation' %>
       <%= render 'layouts/messages' %>
-      <%= yield %>
+      <div id="maincontent">
+        <%= yield %>
+      </div>
     </div>
   </div>
 </main>
