Fix prisme build to ignore non user roles.

--- a/app/views/admin_user_edit/list.html.erb
+++ b/app/views/admin_user_edit/list.html.erb
@@ -151,9 +151,9 @@
                   </ul>
                 </td>
               </tr>
-              <tr id="tr_<%= Roles::NTRT %>">
+              <tr id="tr_<%= Roles::NTRT_USER %>">
                 <td width="30%">
-                  <%= role_checkbox(Roles::NTRT) %>
+                  <%= role_checkbox(Roles::NTRT_USER) %>
                 </td>
                 <td width="70%">
                   <p>The <strong>NTRT</strong> role provides additional functionality to the Read Only role including:<br>
