--- a/app/views/log_events/index.html.erb
+++ b/app/views/log_events/index.html.erb
@@ -1,2 +1,1 @@
-<h1>Log events!</h1>
-<%= react_component("LogEvent", props: @hello_world_props, prerender: false) %>
+<%= react_component('LogEventsModule', props: {title: 'Log Events Rule!'}, prerender: false) %>
