508 style on buttons + adding webpack watch on package.json

--- a/app/views/hl7_messaging/_checksum_discovery_selections.html.erb
+++ b/app/views/hl7_messaging/_checksum_discovery_selections.html.erb
@@ -14,7 +14,7 @@
     <div style='background-color: transparent;padding: 5px;'>
       <div class="section_label">Site Selection(s)</div>
       <div style='float: right'>
-        <button type="button" class="btn btn-for-508-dark btn-sm" data-toggle="modal" data-target="#siteSelectionModal">Select Site(s)</button>
+        <button type="button" class="btn five-compliance btn-sm" data-toggle="modal" data-target="#siteSelectionModal">Select Site(s)</button>
       </div>
       <br>
       <br>
