--- a/app/assets/stylesheets/page_title_bar.scss
+++ b/app/assets/stylesheets/page_title_bar.scss
@@ -27,14 +27,23 @@
   }
 }
 
-.btn-for-508-dark {
-  background: #107896;
-  color: #ffffff;
-}
-
 .sm.btn-for-508 {
   &:hover {
     color: #ffffff;
     border: 1px solid #1187a8;
   }
 }
+
+.five-compliance {
+  color: white;
+  background-color: #107896;
+  border-color: #107896;
+  &:hover {
+    color: white !important;
+    background-color: #107896;
+    border-color: #107896;
+  };
+  &:focus {
+    color: white !important;
+  }
+};
