--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Trigger the modal with a button -->
 <br>
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#app_deploy_modal" onclick="reset_form();">New Application Deployment</button>
+<button type="button" class="btn five-compliance btn-lg" data-toggle="modal" data-target="#app_deploy_modal" onclick="reset_form();">New Application Deployment</button>
 <div class="page-header">
   <h1>Application Deployer</h1>
 </div>
