--- a/app/views/terminology_converter/index.html.erb
+++ b/app/views/terminology_converter/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Trigger the modal with a button -->
 <br>
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="reset_form();">Create Terminology Conversion</button>
+<button type="button" class="btn btn-lg five-compliance" data-toggle="modal" data-target="#myModal" onclick="reset_form();">Create Terminology Conversion</button>
 
 <div class="page-header">
   <h1>Terminology Converter Dashboard</h1>
