--- a/app/views/terminology_db_builder/index.html.erb
+++ b/app/views/terminology_db_builder/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Trigger the modal with a button -->
 <br>
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" onclick="reset_form();">New
+<button type="button" class="btn btn-lg five-compliance" data-toggle="modal" data-target="#myModal" onclick="reset_form();">New
   Database Build Request
 </button>
 <div class="page-header">
