--- a/app/views/terminology_source_packages/index.html.erb
+++ b/app/views/terminology_source_packages/index.html.erb
@@ -16,7 +16,7 @@
 </style>
 <!-- Trigger the modal with a button -->
 <br>
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Terminology Source Package</button>
+<button type="button" class="btn btn-lg five-compliance" data-toggle="modal" data-target="#myModal">Create Terminology Source Package</button>
 <div class="page-header">
   <h1>Terminology Source Package Dashboard</h1>
 </div>
