--- a/app/views/vuid/index.html.erb
+++ b/app/views/vuid/index.html.erb
@@ -1,6 +1,6 @@
 <!-- Trigger the modal with a button -->
 <br>
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Request VUIDs</button>
+<button type="button" class="btn btn-lg five-compliance" data-toggle="modal" data-target="#myModal">Request VUIDs</button>
 <div class="page-header">
   <h1>VUID Requests Dashboard</h1>
 </div>
