--- a/config/props/prisme.properties.erb
+++ b/config/props/prisme.properties.erb
@@ -57,7 +57,7 @@ app_deployer_cache = 5
 #time in minutes between fetches from nexus for the db_builder_cache
 db_builder_cache = 5
 
-#time in minutes between fetches from nexus for the tomcat_deployment_cache
+#time in minutes between fetches from tomcat for the tomcat_deployment_cache
 tomcat_deployment_cache = 5
 
 #slack notify jenkins job build
