508 - tabbing for main page dashboard, changing button contrast colors for Checksum/Discovery

--- a/app/assets/stylesheets/page_title_bar.scss
+++ b/app/assets/stylesheets/page_title_bar.scss
@@ -19,11 +19,11 @@
 
 .btn-for-508 {
   color: #ffffff;
-  background: #1496BB;
-  border: 2px solid #1496BB;
+  background: #107896;
+  border: 2px solid #107896;
   &:hover {
-    background: #1187a8;
-    border: 2px solid #1187a8;
+    background: #107896;
+    border: 2px solid #107896;
   }
 }
 
@@ -37,7 +37,7 @@
 .five-compliance {
   color: white;
   background-color: #107896;
-  border-color: #107896;
+  border-color: #107896 !important;
   &:hover {
     color: white !important;
     background-color: #107896;
