--- a/app/views/app_deployer/index.html.erb
+++ b/app/views/app_deployer/index.html.erb
@@ -38,11 +38,11 @@
             <h3>Select the Application Type</h3>
             <%= field_set_tag 'Select the Application Type' do %>
                 <%= label_tag 'application_ISAAC', class: 'radio-inline' do %>
-                    <%= radio_button_tag 'application', 'ISAAC' %>ISAAC Deployment
+                    <%= radio_button_tag 'application', 'ISAAC', true %>ISAAC Deployment
                 <% end %>
                 <br/>
                 <%= label_tag 'application_KOMET', class: 'radio-inline' do %>
-                    <%= radio_button_tag 'application', 'KOMET', true %><%= KOMET_NAME %> Tooling Deployment
+                    <%= radio_button_tag 'application', 'KOMET' %><%= KOMET_NAME %> Tooling Deployment
                 <% end %>
             <% end %>
 
