--- a/app/views/welcome/_log_events.html.erb
+++ b/app/views/welcome/_log_events.html.erb
@@ -203,6 +203,6 @@
         });
 
         // register for polling
-        polling.registerPolling(polling.pollEnum.WELCOME_LOG_EVENTS, reload_log_events, 30000);
+//        polling.registerPolling(polling.pollEnum.WELCOME_LOG_EVENTS, reload_log_events, 30000);
     });
 </script>
