--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@ Copyright Notice
   <%= csrf_meta_tags %>
   <%= include_gon %>
 </head>
-<body class="<%= controller_name %> <%= action_name %>">
+<body class="<%= controller_name %> <%= action_name %>" data-poll_controller="<%= controller_name %>">
 <a id="skip-nav-link" href="#maincontent">
   Skip to main content
 </a>
@@ -56,6 +56,8 @@ Copyright Notice
         console.log("The timezone being sent is " + tz.toString());
         $.get(gon.routes.utilities_browser_tz_offset_path, {tzOffset: tz}, function (data) {
             console.log("The timezone set was " + JSON.stringify(data));
-        })
+        });
+        //unregister pollers based on poll_controller data in body tag
+        PollMgr.checkCurrentController();
     });
 </script>
